--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -11477,7 +11477,7 @@ body {
   color: rgba(255, 255, 255, 0.5);
 }
 .sb-topnav.navbar-light #sidebarToggle {
-  color: #212529;
+  color: #ffffff;
 }
 
 .sb-sidenav {
