--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -11,9 +11,7 @@ body {
 }
 
 .left-panel {
-  background-color: rgba(255, 255, 255, 0.85);
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px);
+  background-color: #fff;
   border-radius: 0.5rem;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
@@ -35,7 +33,7 @@ body {
 }
 
 .login-form-container {
-  max-width: 250px;
+  max-width: 300px;
   width: 100%;
 }
 
